done chapter 1 and chapter2

--- a/Rory Website/index.html
+++ b/Rory Website/index.html
@@ -13,9 +13,40 @@ This page is where we are going to write our HTML Code -->
   <title>Rory's webpage</title>
 </head>
 
+<link rel="stylesheet" href="CSS/global.css">
+
 <body>
-  <p>hello</p>
-  <p>test</p>
+  
+  <h1>welcome to my website </h1>
+  <h3>in this website you will find<h3>
+
+  <ul>
+    <li>me</li>
+    <li>my amazing coding skills </li>
+    <li>and a monkey</li>
+  </ul>
+
+  <ol> 
+    <li>me</li>
+    <li>my amazing coding skills </li>
+    <li>and a monkey</li>
+  </ol>
+
+  <hr>
+
+  <p>
+    my website is made by the best
+  </p>
+
+  <p>
+    better than any other except <a href="https://skillsamurai.codenow.live">skillsamurai</a>
+    <br>
+    this is very cool
+  </p>
+
+  <img src="C:\Users\Skill Samurai\VSCode\Rory Website\Images\images.jpg" alt="monkey">
+
+
 </body>
 
 
