changes made to header in size

--- a/Rory Website/index.html
+++ b/Rory Website/index.html
@@ -17,8 +17,16 @@ This page is where we are going to write our HTML Code -->
 <body>
 <div class="container">
   <header>
-    </header>
+    <div>
+      <span class="logo-content">
+        <a href="#" class="main-logo">Rory's</a>
+        <span class="page-title">Web Page</span>
+      </span>  
+    </div>  
+  </header>
   
+
+
     <div>
                                                       <h1>welcome to my website </h1>
                                                       <h3>in this website you will find<h3>
