--- a/Rory Website/index.html
+++ b/Rory Website/index.html
@@ -24,41 +24,45 @@ This page is where we are going to write our HTML Code -->
       </span>  
     </div>  
   </header>
+
+
+  <section>
   
 
 
     <div>
-                                                      <h1>welcome to my website </h1>
-                                                      <h3>in this website you will find<h3>
+           <h1>welcome to my website </h1>
+           <h3>in this website you will find<h3>
 
-                                                      <ul>
-                                                        <li>me</li>
-                                                        <li>my amazing coding skills </li>
-                                                        <li>and a monkey</li>
-                                                      </ul>
+       <ul>
+          <li>me</li>
+          <li>my amazing coding skills </li>
+          <li>and a monkey</li>
+       </ul>
 
-                                                      <ol> 
-                                                        <li>me</li>
-                                                        <li>my amazing coding skills </li>
-                                                        <li>and a monkey</li>
-                                                      </ol>
+        <ol> 
+          <li>me</li>
+           <li>my amazing coding skills </li>
+           <li>and a monkey</li>
+         </ol>
 
-                                                      <hr>
+         <hr>
 
-                                                      <p>
-                                                        my website is made by the best
-                                                      </p>
+         <p>
+            my website is made by the best
+        </p>
 
-                                                      <p>
-                                                        better than any other except <a href="https://skillsamurai.codenow.live">skillsamurai</a>
-                                                        <br>
-                                                        this is very cool
-                                                      </p>
+         <p>
+            better than any other except <a href="https://skillsamurai.codenow.live">skillsamurai</a>
+         <br>
+            this is very cool
+         </p>
 
-                                                      <img src="C:\Users\Skill Samurai\VSCode\Rory Website\Images\images.jpg" alt="monkey">
- </div>
-
-  <footer>
+              <img src="C:\Users\Skill Samurai\VSCode\Rory Website\Images\images.jpg" alt="monkey">
+          </div>
+</section>
+  
+<footer>
   </footer>
 
 </div>
