used background colour to make text more visible

--- a/Rory Website/index.html
+++ b/Rory Website/index.html
@@ -30,7 +30,7 @@ This page is where we are going to write our HTML Code -->
   
 
 
-    <div>
+    <div class= "content">
            <h1>welcome to my website </h1>
            <h3>in this website you will find<h3>
 
