--- a/RoryK/Rory Website/index.html
+++ b/RoryK/Rory Website/index.html
@@ -63,6 +63,11 @@ This page is where we are going to write our HTML Code -->
 </section>
   
 <footer>
+  <div>
+    <a class="skillsamurai-icon" target="blank_" href="https://skillsamurai.codenow.live/enrollment/22b5bc55-ba42-40d9-ac42-19b3bb6a3101"> Skill Samurai</a>
+    <a class="youtube-icon" target="blank_"  href="https://www.youtube.com/results?search_query=codakid">youtube</a>
+    <a class="facebook-icon"  target="blank_"  href="https://www.facebook.com/">facebook</a>
+  </div>
   </footer>
 
 </div>
