added nav links

--- a/RoryK/Rory Website/index.html
+++ b/RoryK/Rory Website/index.html
@@ -28,7 +28,13 @@ This page is where we are going to write our HTML Code -->
 
   <section>
   
-
+    <nav>
+      <a href="#" class="nav-home">HOME</a>
+      <a href="#" class="nav-about-me">ABOUT ME</a>
+      <a href="#" class="nav-my-thoughts">MY THOUGHTS</a>
+      <a href="#" class="nav-games">GAMES</a>
+      <a href="#" class="nav-misc">MISC</a>
+      </nav>
 
     <div class= "content">
            <h1>welcome to my website </h1>
