added files for my links

--- a/RoryK/Rory Website/index.html
+++ b/RoryK/Rory Website/index.html
@@ -27,13 +27,13 @@ This page is where we are going to write our HTML Code -->
 
 
   <section>
-  
+
     <nav>
-      <a href="#" class="nav-home">HOME</a>
-      <a href="#" class="nav-about-me">ABOUT ME</a>
-      <a href="#" class="nav-my-thoughts">MY THOUGHTS</a>
-      <a href="#" class="nav-games">GAMES</a>
-      <a href="#" class="nav-misc">MISC</a>
+      <a href="index.html" class="nav-home">HOME</a>
+      <a href="about-me.html" class="nav-about-me">ABOUT ME</a>
+      <a href="my-thoughts.html" class="nav-my-thoughts">MY THOUGHTS</a>
+      <a href="games.html" class="nav-games">GAMES</a>
+      <a href="misc.html" class="nav-misc">MISC</a>
       </nav>
 
     <div class= "content">
