--- a/RoryK/Rory Website/index.html
+++ b/RoryK/Rory Website/index.html
@@ -19,7 +19,7 @@ This page is where we are going to write our HTML Code -->
   <header>
     <div>
       <span class="logo-content">
-        <a href="#" class="main-logo">Rory's</a>
+        <a href="index.html" class="main-logo">Rory's</a>
         <span class="page-title">Web Page</span>
       </span>  
     </div>  
