started media queries

--- a/RoryK/Rory Website/games.html
+++ b/RoryK/Rory Website/games.html
@@ -14,6 +14,10 @@ This page is where we are going to write our HTML Code -->
   </head>
   
   <link rel="stylesheet" href="CSS/global.css">
+  
+  <link rel="stylesheet" href="CSS/media-queries.css"
+<meta name="viewport" content="width=device-width">
+  
   <body>
   <div class="container">
     <header>
