--- a/RoryK/Rory Website/my-thoughts.html
+++ b/RoryK/Rory Website/my-thoughts.html
@@ -16,6 +16,10 @@ This page is where we are going to write our HTML Code -->
 
 
   <link rel="stylesheet" href="CSS/global.css">
+  
+  <link rel="stylesheet" href="CSS/media-queries.css"
+<meta name="viewport" content="width=device-width">
+  
   <body>
   <div class="container">
     <header>
@@ -46,7 +50,7 @@ This page is where we are going to write our HTML Code -->
 
 
 
-        
+
             </div>
   </section>
     
