--- a/RoryK/Rory Website/about-me.html
+++ b/RoryK/Rory Website/about-me.html
@@ -11,12 +11,13 @@ This page is where we are going to write our HTML Code -->
   
   <head>
     <title>Rory's webpage</title>
+    <!-- <meta name="viewport" content="width=device-width"> -->
   </head>
   
   <link rel="stylesheet" href="CSS/global.css">
  
-  <link rel="stylesheet" href="CSS/media-queries.css"
-<meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="CSS/media-queries.css">
+  <meta name="viewport" content="width=device-width">
   
   <body>
   <div class="container">
