--- a/RoryK/Rory Website/index.html
+++ b/RoryK/Rory Website/index.html
@@ -68,7 +68,7 @@ This page is where we are going to write our HTML Code -->
             this is very cool
          </p>
 
-              <img src="C:\Users\Skill Samurai\VSCode\Rory Website\Images\images.jpg" alt="monkey">
+              <img src="./Images/images.jpg" alt="monkey">
           </div>
 </section>
   
