--- a/RoryK/Rory Website/about-me.html
+++ b/RoryK/Rory Website/about-me.html
@@ -11,7 +11,7 @@ This page is where we are going to write our HTML Code -->
   
   <head>
     <title>Rory's webpage</title>
-    <!-- <meta name="viewport" content="width=device-width"> -->
+    <meta name="viewport" content="width=device-width">
   </head>
   
   <link rel="stylesheet" href="CSS/global.css">
@@ -45,9 +45,6 @@ This page is where we are going to write our HTML Code -->
           
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/mKdjycj-7eE?si=Uff5fnocZU5lVbHo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-
-
 
 
 
