--- a/JoshuaH/intro_to_js/arithmatic-operators.html
+++ b/JoshuaH/intro_to_js/arithmatic-operators.html
@@ -1,9 +1,1 @@
-<script>
-    //addition
-    let a = 1+1;
-    console.log (a);
-
-    let b = 10;
-    let c = a + b; 
-    console.log(c);
-</script>
+<script src = "first.js"></script>
