--- a/JoshuaH/intro_to_js/websites/index.html
+++ b/JoshuaH/intro_to_js/websites/index.html
@@ -30,8 +30,10 @@
     let something;
     console.log(something);
 
-    let = HTMLBRE
-    console.log(HTMLBRE)
+    //let = HTMLBRE
+    //console.log(HTMLBRE) 
+    let a = [[1, 2, 3], [4, 5, 6, 7]]
+    console.log(a[1][0])
 
 
 </script>
